VM-1: added metrics to see AI tools usage (tokens count etc.)